# avalanche

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
include/avalanche/: ArrayType.h  BaseNode.h  CLBuffer.h  CLBufferPool.h  CLMemoryManager.h  CodeCache.h  Context.h  ExecutionCache.h  Executor.h  MultiArray.h  Shape.h  backprop.h  base_ops_nodes.h  casting.h  conditional_nodes.h  logging.h  macroses.h  nodes.h  opencl_utils.h  random_nodes.h  shape_nodes.h  terminal_nodes.h  testing_tools.h
include/avalanche/math_ops/: BroadcastedBinaryOp.h  ElemWiseBinaryOp.h  MatMul.h  comparisons.h  const_transformation.h  losses.h  messages.h  reductions.h  simple_arithemic.h  updates.h
python/avalanche/: __init__.py  keras.py
src/avalanche/: BaseNode.cpp  CLBuffer.cpp  CLBufferPool.cpp  CLMemoryManager.cpp  CodeCache.cpp  Context.cpp  ExecutionCache.cpp  Executor.cpp  MultiArray.cpp  Shape.cpp  backprop.cpp  base_ops_nodes.cpp  casting.cpp  conditional_nodes.cpp  logging.cpp  nodes.cpp  opencl_utils.cpp  python_binding.cpp  random_nodes.cpp  shape_nodes.cpp  terminal_nodes.cpp
src/avalanche/kernels/: elem_wise_broadcasted.opencl  random_generator.opencl  reductions.opencl
src/avalanche/math_ops/: BroadcastedBinaryOp.cpp  ElemWiseBinaryOp.cpp  MatMul.cpp  comparisons.cpp  const_transformation.cpp  losses.cpp  reductions.cpp  simple_arithemic.cpp  updates.cpp
test/: test_cl_buffer.cpp  test_issues.cpp  test_math_ops.cpp  test_matmul.cpp  test_memory_manager.cpp  test_opencl_libraries.cpp  test_random_generators.cpp  test_shape_transforms.cpp  test_tree_evaluation.cpp
